[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Textures/UI/playercount_dial_bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/Main Menu/PlayercountDial/playercount_dial.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/UI/playercount_dial_blocks_tiny.png" type="Texture" id=3]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Textures/UI/playercount_dial_bg2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="playercount_dial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1687.0
margin_bottom = -980.0
rect_min_size = Vector2( 0, 84 )
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="bar" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="dials" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="min_players" type="Button" parent="dials"]
anchor_right = 0.05
anchor_bottom = 1.0
margin_right = 27.9
rect_pivot_offset = Vector2( 38, 42 )
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 6 )

[node name="Label" type="Label" parent="dials/min_players"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "0"
align = 1
valign = 1

[node name="max_players" type="Button" parent="dials"]
anchor_right = 0.05
anchor_bottom = 1.0
margin_right = 27.9
rect_pivot_offset = Vector2( 38, 42 )
custom_styles/focus = SubResource( 1 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 6 )

[node name="Label" type="Label" parent="dials/max_players"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "0"
align = 1
valign = 1

[node name="lbl" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 12.0
text = "1 - 12"
align = 1
valign = 2

[connection signal="button_down" from="dials/min_players" to="." method="_on_min_players_button_down"]
[connection signal="button_down" from="dials/max_players" to="." method="_on_max_players_button_down"]
